# sli

./: LICENSE  README.md
sfitsio/src/: INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.src  README  config.h  config.h.in  config.h.src  configure  configure.ac  create_loops.sh  fits.h  fits_hdu.cc  fits_hdu.h  fits_header.cc  fits_header.h  fits_header_record.cc  fits_header_record.h  fits_image.cc  fits_image.h  fits_image_statistics.h  fits_table.cc  fits_table.h  fits_table_col.cc  fits_table_col.h  fitscc.cc  fitscc.h  make_doxyfile.sh  sfitsio.pc.in
sfitsio/src/examples/: Makefile  combine_fits_images.cc  combine_fits_images_md.cc  create_fits_asciitable.cc  create_fits_bintable.cc  create_fits_image.cc  create_fits_image_and_header.cc  create_fits_vl_array.cc  dump_fits_table.cc  read_and_write_fits.cc  read_fits_header.cc  stat_fits_image_pixels.cc  stat_fits_image_pixels_md.cc
sfitsio/src/obsolete/: fits_image.2013Jan09.cc  fits_image.2013Jan09.h  fits_image.2013Jan12.cc  fits_image.2013Jan12.h
sfitsio/src/private/: byte_swap.cc  c_llround.cc  c_lround.cc  c_memcpy.cc  c_memmove.cc  c_memmove.h  c_memset.cc  c_memset.h  encode_csum.cc  encode_csum.h  err_report.h  expand_continue_records.cc  expand_continue_records.h  fits__.h  fits_op.h  fitsio_csum.h  header_format_a_record.cc  header_format_a_record.h  initialize_csum.cc  initialize_csum.h  parse_a_header_record.cc  parse_a_header_record.h  parse_section_expression.cc  rm_side_spaces.c  rm_side_spaces.h  write_stream_or_get_csum.cc  write_stream_or_get_csum.h
sfitsio/src/sample_wcs/: Makefile  get_region_info.cc  plot.tpl  plot_starlist.cc  wcs_test.cc
sfitsio/src/test/: Makefile  access_bte_heap.cc  continue_header.cc  create_from_template.cc  edit_bintable.cc  edit_header.cc  image_copy_paste.cc  read_header_only.cc  rename_header.cc  select_bte.cc  select_ckm.cc  test1.tpl  test2.tpl  test2a.tpl  tzerotscale_bintable.cc
sfitsio/src/test/obsolete/: median_solaris.cc
sfitsio/src/test/old/: image_copy_paste.cc
sfitsio/src/tools/: Makefile  conv_fits_image_bitpix.cc  create_fits_from_template.cc  fill_fits_header_comments.cc  fits_dataunit_md5.cc  hv.cc  rotate_fits_image.cc  transpose_fits_image.cc
sfitsio/src/tools/obsolete/: combine_images.cc  combine_rows.cc  stat_pixels.cc
sfitsio/src/tools/template/: bintable1.tpl  image1.tpl
sllib/src/: INSTALL  LICENSE  LICENSE.GPL  LICENSE.MIT  Makefile  Makefile.am  Makefile.cygwin  Makefile.in  Makefile.src  README  asarray.h  asarray_tstring.cc  asarray_tstring.h  bzstreamio.cc  bzstreamio.h  complex.cc  complex.h  complex_defs.h  config.h  config.h.in  config.h.src  configure  configure.ac  create_mdarray_types.sh  cstreamio.cc  cstreamio.h  ctindex.cc  ctindex.h  digeststreamio.cc  digeststreamio.h  ftpstreamio.cc  ftpstreamio.h  gzstreamio.cc  gzstreamio.h  heap_mem.h  httpstreamio.cc  httpstreamio.h  inetstreamio.cc  inetstreamio.h  install_help.sh  (+77 more)
sllib/src/examples/: Makefile  array_basic.cc  array_digest.cc  array_edit.cc  array_fast_access.cc  array_idl.cc  array_math.cc  array_statistics.cc  associative_string_array.cc  gnuplot_animation.cc  http_client.cc  read_local_text_file.cc  read_text_from_net.cc  readline.cc  regexp_back_reference.cc  split_string.cc  stdout_stderr.cc  string_array_basic.cc  string_basic.cc  string_bracket.cc  string_edit.cc  string_match.cc  string_regexp.cc  verbose_grep.cc
sllib/src/obsolete/: _asarray_plain.h  _tarray_plain.h  asarray_ctypes.cc  asarray_ctypes.h  install.sh  mdarray.2013jan10.cc  mdarray.2013jan10.h  mdarray.2013jan12.cc  mdarray.2013jan12.h  mdarray.2013jan14.cc  mdarray.2013jan14.h  mdarray_if_0.cc  mdarray_statistics.h  mdarray_types.2013jan10.cc.src  mdarray_types.2013jan10.h.src  mdarray_types.2013jan12.cc.src  mdarray_types.2013jan12.h.src  tarray_ctypes.cc  tarray_ctypes.h  tarray_plain.cc  tarray_plain.h  tstring.cc
sllib/src/private/: _test_sse2.h  _tune_sse2.h  c__exit.c  c__exit.h  c_asprintf.c  c_asprintf.h  c_ceil.cc  c_ceil.h  c_clearerr.c  c_clearerr.h  c_close.c  c_close.h  c_dup.c  c_dup.h  c_dup2.c  c_dup2.h  c_execvp.c  c_execvp.h  c_fclose.c  c_fclose.h  c_fdopen.c  c_fdopen.h  c_feof.c  c_feof.h  c_ferror.c  c_ferror.h  c_fflush.c  c_fflush.h  c_fgetc.cc  c_fgetc.h  c_fgets.c  c_fgets.h  c_fileno.c  c_fileno.h  c_floor.cc  c_floor.h  c_fopen.c  c_fopen.h  c_fork.c  c_fork.h  (+156 more)
sllib/src/private/old/: c_strchr.c  c_strcmp.c  c_strlen.c  c_strncmp.c  c_strrchr.c  memfill.cc
sllib/src/skel/: mdarray_complex_calc1_noptr.cc  mdarray_complex_calc1r_noptr.cc  mdarray_complex_calc2_noptr.cc  mdarray_complex_calc2s_noptr.cc  mdarray_math_calc1_noptr.cc  mdarray_math_calc2_noptr.cc  mdarray_math_calc2s_noptr.cc
sllib/src/test/: Makefile  cmath_test.cc  complex_array.cc  mdarray_performance.cc  quot_chars.cc  split.cc  super_cat.cc  super_gzbz.cc
sllib/src/test/ASARRAY_TSTRING/: 011_opeElem_sample.cc  01_opeEqu_sample.cc  02_length_sample.cc  03_cstrarray_sample.cc  04_cstr_sample.cc  05_at_sample.cc  06_init_sample.cc  07_clean_sample.cc  08_split_keys_sample.cc  09_assign_sample.cc  10_assign_sample.cc  11_append_sample.cc  12_append_sample.cc  13_insert_sample.cc  14_insert_sample.cc  15_erase_sample.cc  16_swap_sample.cc  17_index_sample.cc  18_key_sample.cc  Makefile  split_key_value.csv
sllib/src/test/CTINDEX/: 01_opeEqu_sample.cc  02_init_sample.cc  03_append_sample.cc  04_update_sample.cc  05_erase_sample.cc  06_index_sample.cc  Makefile  do_test.sh  test_result_ok.txt
sllib/src/test/MDARRAY/: 00_constructor_sample.cc  01_opeEqu_sample.cc  02_opeEqu_sample.cc  03_opePlus_sample.cc  04_opeSubst_sample.cc  05_opeMulti_sample.cc  06_opeDivid_sample.cc  071_opeNotComp_sample.cc  07_opeComp_sample.cc  08_size_type_sample.cc  09_bytes_sample.cc  10_dim_length_sample.cc  11_length_sample.cc  12_byte_length_sample.cc  13_col_length_sample.cc  14_row_length_sample.cc  15_layer_length_sample.cc  16_assign_default_sample.cc  17_default_value_sample.cc  18_init_sample.cc  19_auto_resize_sample.cc  20_rounding_sample.cc  21_dvalue_sample.cc  22_lvalue_sample.cc  (+63 more)
(+49 files in other folders)
